overflow of img in wrapper container causing movement fixed.

--- a/client/src/Pages/Landing Page/components/Offer/components/ImageComponent.module.scss
+++ b/client/src/Pages/Landing Page/components/Offer/components/ImageComponent.module.scss
@@ -5,5 +5,7 @@
 	max-width: 500px;
 	max-height: 330px;
 	min-height: 330px;
+	overflow-x: hidden;
+	overflow-y: hidden;
 	// margin-left: auto;
 }
